@@ -950,7 +950,7 @@
 2299,7,6,2,0,0x1,0,3,1,no,0,0,3,misc,0,		SC_MANHOLE,Man Hole
 2300,7,6,2,0,0,0,3,1,no,0,0,1,misc,0,		SC_DIMENSIONDOOR,Dimension Door
 2301,9,6,2,0,0,0,3,1,no,0,0,0,misc,0,		SC_CHAOSPANIC,Chaos Panic
-2302,0,0,0,0,0,0,3,0,no,0,0,0,none,0,		SC_MAELSTROM,Maelstrom
+2302,7,6,2,0,0x03,5,3,1,yes,0,0,0,misc,0,		SC_MAELSTROM,Maelstrom
 2303,9,6,2,0,0,0,3,1,no,0,0,0,misc,0,		SC_BLOODYLUST,Bloody Lust
 2304,0,0,0,0,0,0,3,0,no,0,0,0,none,0,		SC_FEINTBOMB,Feint Bomb
 
