@@ -356,6 +356,15 @@ int battle_calc_damage(struct block_list *src,struct block_list *bl,struct Damag
 			d->dmg_lv = ATK_BLOCK;
 			return 0;
 		}
+		
+		if( sc->data[SC__MAELSTROM] && (flag&BF_MAGIC) && skill_num && (skill_get_inf(skill_num)&INF_GROUND_SKILL) )
+		{
+			int sp = damage * 20 / 100; // Steel need official value.
+			status_heal(bl,0,sp,3);
+			clif_skill_nodamage(bl,bl,SC_MAELSTROM,1,1);
+			d->dmg_lv = ATK_BLOCK;
+			return 0;
+		}
 
 		if( (sce=sc->data[SC_AUTOGUARD]) && flag&BF_WEAPON && !(skill_get_nk(skill_num)&NK_NO_CARDFIX_ATK) && rand()%100 < sce->val2 )
 		{
